--- a/ansible-playbooks/distribute-ssh-keys.yml
+++ b/ansible-playbooks/distribute-ssh-keys.yml
@@ -1,3 +1,26 @@
-- hosts: "*"
-  become: yes
+---
+- name: Add SSH Key
+  hosts: ubuntu
+  remote_user: mike
+  become: true
+  gather_facts: false
+  vars:
+# Define your username and password here that you want to create on target hosts.
+    username: mike
+    userpass: nsB2h5GHQw7J5TGm
   tasks:
+    - name: Create User
+      ansible.builtin.user:
+        name: "{{ username }}"
+        state: present
+        shell: /bin/bash
+        password: "{{ userpass | password_hash('sha512') }}"
+        update_password: on_create
+#        groups: "{{ super_group }}"
+        append: yes
+
+    - name: Deploy SSH Public Key
+      ansible.posix.authorized_key:
+        user: "{{ username }}"
+        state: present
+        key: "{{ lookup('file', '/home/{{ username }}/.ssh/id_rsa.pub') }}"
