--- a/ansible-playbooks/distribute-ssh-keys.yml
+++ b/ansible-playbooks/distribute-ssh-keys.yml
@@ -1,12 +1,12 @@
 ---
 - name: Add SSH Key
-  hosts: ubuntu
+  hosts: pihole
   remote_user: mike
   become: true
   gather_facts: false
   vars:
 # Define your username and password here that you want to create on target hosts.
-    username: mike
+    username: mikeansible
     userpass: nsB2h5GHQw7J5TGm
   tasks:
     - name: Create User
@@ -16,7 +16,7 @@
         shell: /bin/bash
         password: "{{ userpass | password_hash('sha512') }}"
         update_password: on_create
-#        groups: "{{ super_group }}"
+        groups: "{{ super_group }}"
         append: yes
 
     - name: Deploy SSH Public Key
